native/bridge/include/jpdfium.h

JPDFIUM_EXPORT int32_t jpdfium_redact_words(int64_t page, const char** words, int32_t wordCount,
                                            uint32_t argb, float padding, int32_t wholeWord,
                                            int32_t useRegex,
                                            int32_t remove_content) JPDFIUM_NOEXCEPT;
JPDFIUM_EXPORT int32_t jpdfium_redact_words_ex(int64_t page, const char** words, int32_t wordCount,
                                               uint32_t argb, float padding, int32_t wholeWord,
                                               int32_t useRegex, int32_t remove_content,
                                               int32_t caseSensitive,
                                               int32_t* matchCount) JPDFIUM_NOEXCEPT;
JPDFIUM_EXPORT int32_t jpdfium_page_flatten(int64_t page) JPDFIUM_NOEXCEPT;
JPDFIUM_EXPORT int32_t jpdfium_page_to_image(int64_t doc, int32_t pageIndex, int32_t dpi);
// Returns JSON: [{"i":0,"ox":10.1,"oy":20.2,"l":10.0,"r":18.0,"b":15.0,"t":27.0}, ...]
JPDFIUM_EXPORT int32_t jpdfium_text_get_char_positions(int64_t page, char** json);
// Annotation-Based Redaction (Mark / Commit pattern)

// Mark phase: create a single REDACT annotation at the given rectangle.
// The annotation is stored in the page's annotation dictionary; the content
// stream is NOT modified.  Returns the annotation index on success.
JPDFIUM_EXPORT int32_t jpdfium_annot_create_redact(int64_t page, float x, float y, float w, float h,
                                                   uint32_t argb,
                                                   int32_t* annot_index) JPDFIUM_NOEXCEPT;