jpdfium/src/main/java/stirling/software/jpdfium/panama/JpdfiumH.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_words(int64_t page, const char **words, int32_t wordCount, uint32_t argb, float padding, int32_t wholeWord, int32_t useRegex, int32_t remove_content)
     * }
     */
    public static FunctionDescriptor jpdfium_redact_words$descriptor() {
        return jpdfium_redact_words.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_words(int64_t page, const char **words, int32_t wordCount, uint32_t argb, float padding, int32_t wholeWord, int32_t useRegex, int32_t remove_content)
     * }
     */
    public static MethodHandle jpdfium_redact_words$handle() {
        return jpdfium_redact_words.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_words(int64_t page, const char **words, int32_t wordCount, uint32_t argb, float padding, int32_t wholeWord, int32_t useRegex, int32_t remove_content)
     * }
     */
    public static MemorySegment jpdfium_redact_words$address() {
        return jpdfium_redact_words.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_redact_words(int64_t page, const char **words, int32_t wordCount, uint32_t argb, float padding, int32_t wholeWord, int32_t useRegex, int32_t remove_content)
     * }
     */
    public static int jpdfium_redact_words(long page, MemorySegment words, int wordCount, int argb, float padding, int wholeWord, int useRegex, int remove_content) {
        var mh$ = jpdfium_redact_words.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_redact_words", page, words, wordCount, argb, padding, wholeWord, useRegex, remove_content);
            }
            return (int)mh$.invokeExact(page, words, wordCount, argb, padding, wholeWord, useRegex, remove_content);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_redact_words_ex {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER,
            JpdfiumH.C_INT,
            JpdfiumH.C_INT,
            JpdfiumH.C_FLOAT,
            JpdfiumH.C_INT,
            JpdfiumH.C_INT,
            JpdfiumH.C_INT,
            JpdfiumH.C_INT,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_redact_words_ex");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_words_ex(int64_t page, const char **words, int32_t wordCount, uint32_t argb, float padding, int32_t wholeWord, int32_t useRegex, int32_t remove_content, int32_t caseSensitive, int32_t *matchCount)
     * }
     */
    public static FunctionDescriptor jpdfium_redact_words_ex$descriptor() {
        return jpdfium_redact_words_ex.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_words_ex(int64_t page, const char **words, int32_t wordCount, uint32_t argb, float padding, int32_t wholeWord, int32_t useRegex, int32_t remove_content, int32_t caseSensitive, int32_t *matchCount)
     * }
     */
    public static MethodHandle jpdfium_redact_words_ex$handle() {
        return jpdfium_redact_words_ex.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_words_ex(int64_t page, const char **words, int32_t wordCount, uint32_t argb, float padding, int32_t wholeWord, int32_t useRegex, int32_t remove_content, int32_t caseSensitive, int32_t *matchCount)
     * }
     */
    public static MemorySegment jpdfium_redact_words_ex$address() {
        return jpdfium_redact_words_ex.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_redact_words_ex(int64_t page, const char **words, int32_t wordCount, uint32_t argb, float padding, int32_t wholeWord, int32_t useRegex, int32_t remove_content, int32_t caseSensitive, int32_t *matchCount)
     * }
     */
    public static int jpdfium_redact_words_ex(long page, MemorySegment words, int wordCount, int argb, float padding, int wholeWord, int useRegex, int remove_content, int caseSensitive, MemorySegment matchCount) {
        var mh$ = jpdfium_redact_words_ex.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_redact_words_ex", page, words, wordCount, argb, padding, wholeWord, useRegex, remove_content, caseSensitive, matchCount);
            }
            return (int)mh$.invokeExact(page, words, wordCount, argb, padding, wholeWord, useRegex, remove_content, caseSensitive, matchCount);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_page_flatten {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_page_flatten");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_page_flatten(int64_t page)
     * }
     */
    public static FunctionDescriptor jpdfium_page_flatten$descriptor() {
        return jpdfium_page_flatten.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_page_flatten(int64_t page)
     * }
     */
    public static MethodHandle jpdfium_page_flatten$handle() {
        return jpdfium_page_flatten.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_page_flatten(int64_t page)
     * }
     */
    public static MemorySegment jpdfium_page_flatten$address() {
        return jpdfium_page_flatten.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_page_flatten(int64_t page)
     * }
     */
    public static int jpdfium_page_flatten(long page) {
        var mh$ = jpdfium_page_flatten.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_page_flatten", page);
            }
            return (int)mh$.invokeExact(page);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_page_to_image {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_INT,
            JpdfiumH.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_page_to_image");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_page_to_image(int64_t doc, int32_t pageIndex, int32_t dpi)
     * }
     */
    public static FunctionDescriptor jpdfium_page_to_image$descriptor() {
        return jpdfium_page_to_image.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_page_to_image(int64_t doc, int32_t pageIndex, int32_t dpi)
     * }
     */
    public static MethodHandle jpdfium_page_to_image$handle() {
        return jpdfium_page_to_image.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_page_to_image(int64_t doc, int32_t pageIndex, int32_t dpi)
     * }
     */
    public static MemorySegment jpdfium_page_to_image$address() {
        return jpdfium_page_to_image.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_page_to_image(int64_t doc, int32_t pageIndex, int32_t dpi)
     * }
     */
    public static int jpdfium_page_to_image(long doc, int pageIndex, int dpi) {
        var mh$ = jpdfium_page_to_image.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_page_to_image", doc, pageIndex, dpi);
            }
            return (int)mh$.invokeExact(doc, pageIndex, dpi);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_text_get_char_positions {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_text_get_char_positions");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_text_get_char_positions(int64_t page, char **json)
     * }
     */
    public static FunctionDescriptor jpdfium_text_get_char_positions$descriptor() {
        return jpdfium_text_get_char_positions.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_text_get_char_positions(int64_t page, char **json)
     * }
     */
    public static MethodHandle jpdfium_text_get_char_positions$handle() {
        return jpdfium_text_get_char_positions.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_text_get_char_positions(int64_t page, char **json)
     * }
     */
    public static MemorySegment jpdfium_text_get_char_positions$address() {
        return jpdfium_text_get_char_positions.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_text_get_char_positions(int64_t page, char **json)
     * }
     */
    public static int jpdfium_text_get_char_positions(long page, MemorySegment json) {
        var mh$ = jpdfium_text_get_char_positions.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_text_get_char_positions", page, json);
            }
            return (int)mh$.invokeExact(page, json);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_annot_create_redact {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_FLOAT,
            JpdfiumH.C_FLOAT,
            JpdfiumH.C_FLOAT,
            JpdfiumH.C_FLOAT,
            JpdfiumH.C_INT,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_annot_create_redact");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_annot_create_redact(int64_t page, float x, float y, float w, float h, uint32_t argb, int32_t *annot_index)
     * }
     */
    public static FunctionDescriptor jpdfium_annot_create_redact$descriptor() {
        return jpdfium_annot_create_redact.DESC;
    }
